--- a/src/tests/BUILD.gn
+++ b/src/tests/BUILD.gn
@@ -242,7 +242,7 @@ if (is_ios) {
   }
 }
 
-if (is_win || is_linux || is_chromeos || is_android || is_fuchsia || is_apple) {
+if (is_win || is_linux || is_chromeos || is_android || is_fuchsia || is_apple || is_ohos) {
   import("angle_end2end_tests.gni")
 
   angle_test("angle_end2end_tests") {
@@ -488,7 +488,7 @@ if (angle_enable_cl_testing) {
   }
 }
 
-if (is_win || is_linux || is_chromeos || is_android || is_fuchsia || is_apple) {
+if (is_win || is_linux || is_chromeos || is_android || is_fuchsia || is_apple || is_ohos) {
   import("angle_white_box_tests.gni")
 
   angle_test("angle_white_box_tests") {
@@ -569,7 +569,7 @@ angle_perftests_common("angle_perftests_static") {
   test_utils = ":angle_common_test_utils_static"
 }
 
-if (is_win || is_linux || is_chromeos || is_android || is_apple) {
+if (is_win || is_linux || is_chromeos || is_android || is_apple || is_ohos) {
   import("angle_perftests.gni")
 
   # This test suite is for perf tests that use ANGLE's internals in some direct way.
